# datamining-t3

./: .gitignore  .pdm-python  README.md  compose.yaml  cspell.json  pyproject.toml
src/database/: clean_tables.py  connection.py  create_database_schema.py  engine.py  fetch_bus_data.py  get_table_structure.py  import_all_data.py  run_sql_script.py
src/general/: logging.py
src/notebooks/: 01_load_to_db.ipynb  02_exploratory_analisys.ipynb  analyse.ipynb  load_to_db.ipynb
src/sql/: 202506152325_db_init.sql  202506221323_drop_unused_lines.sql  create_tables.sql  db_init.sql
src/visualization/: plot_bus_route.py  save_folium_as_png.py
