[project]
name = "datamining-t3"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Renan Passos", email = "renanvmsp@gmail.com" }]
dependencies = [
    "ipykernel>=6.29.5",
    "psycopg2>=2.9.10",
    "geopandas>=1.1.0",
    "psycopg2-binary>=2.9.10",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
