[project]
name = "datamining-t3"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Renan Passos", email = "renanvmsp@gmail.com" }]
dependencies = [
    "ipykernel>=6.29.5",
    "geopandas>=1.1.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "matplotlib>=3.10.3",
    "folium>=0.20.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
